@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/gtk-vnc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gtk-vnc/ChangeLog,v 1.19 2008/08/12 13:49:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gtk-vnc/ChangeLog,v 1.20 2008/09/20 14:52:35 eva Exp $
+
+*gtk-vnc-0.3.7 (20 Sep 2008)
+
+  20 Sep 2008; Gilles Dartiguelongue <eva@gentoo.org> -gtk-vnc-0.3.4.ebuild,
+  +gtk-vnc-0.3.7.ebuild:
+  bump to 0.3.7, bug fixes and addition of the downscaling API.
 
   12 Aug 2008; Raúl Porcel <armin76@gentoo.org> gtk-vnc-0.3.6.ebuild:
   alpha/ia64/sparc stable wrt #229709
